# OALWrapper

./: .gitignore  CMakeLists.txt
sources/: OAL_EFXManager.cpp  OAL_Effect.cpp  OAL_EffectSlot.cpp  OAL_Source.cpp  OAL_SourceManager.cpp
tests/Playlist/: main.cpp
